examples/test/testpolicy3279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3279
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key33: value19
      key12: value13
      key19: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value46
      podSelector:
        matchLabels:
          key15: value12
